tests/scan/fixtures/validation/negative/clean_go_clean-log-writer/go.mod
module github.com/example/clean-log-writer
go 1.21
